<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:theme="@style/AppTheme">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintBottom_toTopOf="@id/reboot_button"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/toapp_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:text="@string/select_apps" />


            <Button
                android:id="@+id/patchapps"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/patch_custom_apps"
                android:layout_marginStart="15dp"
                android:focusable="true"
                android:clickable="true"/>

            <ImageView
                android:id="@+id/patchedappstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_check_circle_24"
                android:padding="11dp"/>

        </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <Button
            android:id="@+id/nospeed"
            android:layout_width="@dimen/button_width_constant"
            android:layout_height="wrap_content"
            android:text="@string/unlimited_scrolling_when_driving"
            android:focusable="true"
            android:clickable="true"/>
        <ImageView
            android:id="@+id/speedhackstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_circle_24"
            android:padding="11dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/taplimit"
            android:layout_width="@dimen/button_width_constant"
            android:layout_height="wrap_content"
            android:text="@string/disable_speed_limitations"
            android:focusable="true"
            android:clickable="true"/>
        <ImageView
            android:id="@+id/sixtapstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_circle_24"
            android:padding="11dp"/>
    </LinearLayout>
        


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/assistshort"
            android:layout_width="@dimen/button_width_constant"
            android:layout_height="wrap_content"
            android:text="@string/enable_assistant_shortcuts"
            android:focusable="true"
            android:clickable="true"/>

        <ImageView
            android:id="@+id/shortcutstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_circle_24"
            android:layout_marginTop="5dp"
            android:padding="11dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/assistanim"
            android:layout_width="@dimen/button_width_constant"
            android:layout_height="wrap_content"
            android:text="@string/enable_assistant_animation_in_navbar"
            android:focusable="true"
            android:clickable="true"/>

        <ImageView
            android:id="@+id/assistanimstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_circle_24"
            android:padding="11dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/startup"
            android:layout_width="@dimen/button_width_constant"
            android:layout_height="wrap_content"
            android:text="@string/navigation_at_start"
            android:focusable="true"
            android:clickable="true"/>

        <ImageView
            android:id="@+id/navstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_circle_24"
            android:padding="11dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/battoutline"
            android:layout_width="@dimen/button_width_constant"
            android:layout_height="wrap_content"
            android:text="@string/battery_outline_string"
            android:focusable="true"
            android:clickable="true"/>

        <ImageView
            android:id="@+id/batterystatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_circle_24"
            android:layout_marginTop="5dp"
            android:padding="9dp"/>

    </LinearLayout>




        <TextView
            android:id="@+id/logs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/appbar_padding_top"
            android:scrollbars="vertical|horizontal"
            android:scrollHorizontally="true"
            android:text="@string/main_string"
            app:layout_constraintTop_toBottomOf="@+id/reboot_button"
            app:layout_constraintBottom_toTopOf="@id/reboot_button"/>
    </LinearLayout>


    <Button
        android:id="@+id/reboot_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/fab_background"
        android:textColor="@android:color/white"
        android:drawableLeft="@drawable/ic_baseline_settings_backup_restore_24"
        android:drawablePadding="5dp"
        android:text="REBOOT TO APPLY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"
        android:focusable="true"
        android:clickable="true"/>

</android.support.constraint.ConstraintLayout>