<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <Button
            android:id="@+id/patchapps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:clickable="true"
            style="@style/ButtonStyle"
           android:focusable="true"

            android:text="@string/patch_custom_apps"
            app:layout_constraintEnd_toStartOf="@id/patchedappstatus"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/toapp_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/toapp_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/select_apps"
            app:layout_constraintEnd_toStartOf="@id/patchapps"
            app:layout_constraintHorizontal_weight="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/patchedappstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_circle_24"
            app:layout_constraintBottom_toBottomOf="@id/toapp_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/patchapps"
            app:layout_constraintTop_toTopOf="@id/toapp_button" />

        <Button
            android:id="@+id/nospeed"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/toapp_button"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/speedhackstatus"
            app:layout_constraintStart_toEndOf="@id/patchapps"
            android:clickable="true"

           android:focusable="true"

            android:text="@string/unlimited_scrolling_when_driving"
            app:layout_constraintEnd_toEndOf="@id/patchapps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patchapps" />

        <ImageView
            android:id="@+id/speedhackstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:src="@drawable/ic_baseline_check_circle_24"
            app:layout_constraintStart_toEndOf="@id/patchapps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/nospeed"
            app:layout_constraintBottom_toBottomOf="@id/nospeed"/>

        <Button
            android:id="@+id/taplimit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            style="@style/ButtonStyle"
           android:focusable="true"

            android:text="@string/disable_speed_limitations"
            app:layout_constraintEnd_toEndOf="@id/patchapps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nospeed" />

        <ImageView
            android:id="@+id/sixtapstatus"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_check_circle_24"
            android:layout_marginEnd="3dp"
            app:layout_constraintStart_toEndOf="@id/taplimit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/taplimit"
            app:layout_constraintBottom_toBottomOf="@id/taplimit"/>


        <Button
            android:id="@+id/assistshort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            style="@style/ButtonStyle"
           android:focusable="true"

            android:text="@string/enable_assistant_shortcuts"
            app:layout_constraintEnd_toEndOf="@id/patchapps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/taplimit" />

        <ImageView
            android:id="@+id/shortcutstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_circle_24"
            android:layout_marginEnd="3dp"
            app:layout_constraintStart_toEndOf="@id/assistshort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/assistshort"
            app:layout_constraintBottom_toBottomOf="@id/assistshort" />

        <Button
            android:id="@+id/startup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            style="@style/ButtonStyle"
           android:focusable="true"

            android:text="@string/navigation_at_start"
            app:layout_constraintEnd_toEndOf="@id/patchapps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/assistshort" />

        <ImageView
            android:id="@+id/navstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_circle_24"
            android:layout_marginEnd="3dp"
            app:layout_constraintStart_toEndOf="@id/startup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/startup"
            app:layout_constraintBottom_toBottomOf="@id/startup"/>

        <Button
            android:id="@+id/force_ws_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            style="@style/ButtonStyle"
           android:focusable="true"

            android:text="@string/force_widescreen_text"
            app:layout_constraintEnd_toEndOf="@id/patchapps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startup" />

        <ImageView
            android:id="@+id/force_ws_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_circle_24"
            android:layout_marginEnd="3dp"
            app:layout_constraintStart_toEndOf="@id/force_ws_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/force_ws_button"
            app:layout_constraintBottom_toBottomOf="@id/force_ws_button"/>

        <Button
            android:id="@+id/force__no_ws_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            style="@style/ButtonStyle"
           android:focusable="true"

            android:text="@string/base_no_ws"
            app:layout_constraintEnd_toEndOf="@id/patchapps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/force_ws_button" />

        <ImageView

            android:id="@+id/force_no_ws_status"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_baseline_check_circle_24"
            android:layout_marginEnd="3dp"
            app:layout_constraintStart_toEndOf="@id/force__no_ws_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/force__no_ws_button"
            app:layout_constraintBottom_toBottomOf="@id/force__no_ws_button"/>

        <Button
            android:id="@+id/multi_display_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            style="@style/ButtonStyle"
           android:focusable="true"

            android:text="@string/multi_display_string"
            app:layout_constraintEnd_toEndOf="@id/patchapps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/force__no_ws_button" />

        <ImageView
            android:id="@+id/multi_display_status"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_baseline_check_circle_24"
            android:layout_marginEnd="3dp"
            app:layout_constraintStart_toEndOf="@id/multi_display_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/multi_display_button"
            app:layout_constraintBottom_toBottomOf="@id/multi_display_button"/>

        <Button
            android:id="@+id/battery_warning_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            style="@style/ButtonStyle"
           android:focusable="true"

            android:text="@string/battery_warning"
            app:layout_constraintEnd_toEndOf="@id/patchapps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/multi_display_button" />

        <ImageView
            android:id="@+id/battery_warning_status"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_baseline_check_circle_24"
            android:layout_marginEnd="3dp"
            app:layout_constraintStart_toEndOf="@id/battery_warning_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/battery_warning_button"
            app:layout_constraintBottom_toBottomOf="@id/battery_warning_button"/>

        <Button
            android:id="@+id/custom_wallpapers_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            style="@style/ButtonStyle"
            android:focusable="true"

            android:text="@string/custom_wallpapers"
            app:layout_constraintEnd_toEndOf="@id/patchapps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/battery_warning_button" />

        <ImageView
            android:id="@+id/custom_wallpapers_status"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_baseline_check_circle_24"
            android:layout_marginEnd="3dp"
            app:layout_constraintStart_toEndOf="@id/custom_wallpapers_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/custom_wallpapers_button"
            app:layout_constraintBottom_toBottomOf="@id/custom_wallpapers_button"/>


</android.support.constraint.ConstraintLayout>

</ScrollView>